--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
     ],
     "liveSassCompile.settings.generateMap": true,
     "liveServer.settings.Port": 1235,
-    "liveSassCompile.settings.autoprefix": null
+    "liveSassCompile.settings.autoprefix": null,
+    "liveServer.settings.port": 5501
     // "liveSassCompile.settings.autoprefix": [
     //     "> 1%",
     //     "last 2 versions"
